--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2021.1
 requests==2.26.0
+six==1.16.0
 toml==0.10.2
 urllib3==1.26.6
